Skip the title line in the Apple Password file Put the CSV filter